// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Error Toast 1`] = `
<div
  className="box marginBottom3 paddingX4"
  role="status"
  style={
    Object {
      "maxWidth": "min(500px, 100vw)",
      "minWidth": 330,
      "width": 330,
    }
  }
>
  <div
    className="box fit paddingX6 paddingY6 pill redBg shadow"
  >
    <div
      className="Flex rowGap4 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem flexGrow"
        style={
          Object {
            "maxWidth": undefined,
          }
        }
      >
        <div
          className="Text fontSize300 lightText alignCenter breakWord fontWeightNormal"
        >
          Same great profile, slightly new look. Learn more?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text + Image + Button 1`] = `
<div
  className="box marginBottom3 paddingX4"
  role="status"
  style={
    Object {
      "maxWidth": "min(500px, 100vw)",
      "minWidth": 330,
      "width": undefined,
    }
  }
>
  <div
    className="box darkGrayBg fit paddingX6 paddingY6 pill shadow"
  >
    <div
      className="Flex rowGap4 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem flexNone"
      >
        <div
          className="Mask rounding2 willChangeTransform"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <img
            alt=""
            src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
          />
        </div>
      </div>
      <div
        className="FlexItem flexGrow"
        style={
          Object {
            "maxWidth": 127,
          }
        }
      >
        <div
          className="Text fontSize300 lightText alignStart breakWord fontWeightNormal"
        >
          <span
            className="textColorOverrideLight"
          >
            Saved to
             
            <span
              className="Text fontSize300 defaultText alignStart breakWord fontWeightBold"
            >
              <a
                className="link hideOutline tapTransition rounding0 inlineBlock noUnderline hoverUnderline accessibilityOutline"
                href="https://www.pinterest.com/search/pins/?q=home%20decor"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                rel=""
                target={null}
              >
                Home decor
              </a>
            </span>
          </span>
        </div>
      </div>
      <div
        className="FlexItem flexNone"
      >
        <button
          className="button hideOutline inline accessibilityOutline parentButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="button hideOutline inline accessibilityOutline tapTransition lg gray enabled childrenDiv"
          >
            <div
              className="Text fontSize300 defaultText alignCenter fontWeightBold"
            >
              Undo
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text + Image 1`] = `
<div
  className="box marginBottom3 paddingX4"
  role="status"
  style={
    Object {
      "maxWidth": "min(500px, 100vw)",
      "minWidth": 330,
      "width": 330,
    }
  }
>
  <div
    className="box darkGrayBg fit paddingX6 paddingY6 pill shadow"
  >
    <div
      className="Flex rowGap4 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem flexNone"
      >
        <div
          className="Mask rounding2 willChangeTransform"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <img
            alt=""
            src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
          />
        </div>
      </div>
      <div
        className="FlexItem flexGrow"
        style={
          Object {
            "maxWidth": undefined,
          }
        }
      >
        <div
          className="Text fontSize300 lightText alignStart breakWord fontWeightNormal"
        >
          <span
            className="textColorOverrideLight"
          >
            Saved to
             
            <span
              className="Text fontSize300 defaultText alignStart breakWord fontWeightBold"
            >
              <a
                className="link hideOutline tapTransition rounding0 inlineBlock noUnderline hoverUnderline accessibilityOutline"
                href="https://www.pinterest.com/search/pins/?q=home%20decor"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                rel=""
                target={null}
              >
                Home decor
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Toast /> Text Only 1`] = `
<div
  className="box marginBottom3 paddingX4"
  role="status"
  style={
    Object {
      "maxWidth": "min(500px, 100vw)",
      "minWidth": 330,
      "width": 330,
    }
  }
>
  <div
    className="box darkGrayBg fit paddingX6 paddingY6 pill shadow"
  >
    <div
      className="Flex rowGap4 itemsCenter xsDirectionRow"
    >
      <div
        className="FlexItem flexGrow"
        style={
          Object {
            "maxWidth": undefined,
          }
        }
      >
        <div
          className="Text fontSize300 lightText alignCenter breakWord fontWeightNormal"
        >
          Same great profile, slightly new look. Learn more?
        </div>
      </div>
    </div>
  </div>
</div>
`;
